added digital gold and code coverage to other sites

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
-							<li><a href="item_10.html">DELTA</a></li>
+							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
@@ -172,9 +172,9 @@
 										<img src="images/pic10.jpg" alt="" />
 									</span>
 									<a href="item_10.html">
-										<h2>DELTA</h2>
+										<h2>Digital Gold</h2>
 										<div class="content">
-											<p>Real estate compamy website build with HTML, CSS and Slick - jQuery plugin for creating fully customizable, responsive and mobile friendly carousels/sliders.</p>
+											<p>Python application powered by Django and its Object-Relational Mapper to show trading signals based on mathematical algorithm, that indicates it is a good time to buy or sell Bitcoin.</p>
 										</div>
 									</a>
 								</article>
