--- a/item_04.html
+++ b/item_04.html
@@ -51,7 +51,7 @@
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
-							<li><a href="item_10.html">DELTA</a></li>
+							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
@@ -65,9 +65,11 @@
 							<span class="image main"><img src="images/mockups/geo_mockup.png" alt="" /></span>
 
 							<h3>This is a Django Rest Framework API project powered by JSON Web Token authentication mechanism to provide convenient access to the IP geolocation database from applications written in the Python language. 
-                                Its main function is to take full advantage of the custom models and serializers, to make it possible for the users to create, view and delete geolocation records.
                             </h3>
-							<br>
+							<p>
+								Its main function is to take full advantage of the custom models and serializers, to make it possible for the users to create, view and delete geolocation records.
+							</p>
+							<hr>
 							<section>
 								<div class="tools">
 									<table class="alt">
@@ -112,7 +114,10 @@
                                 </ul>
                                 <li>Make sure to set application/x-www-form-urlencoded as content type when sending user credentials and bearer token in the authorization header for your access JWT respectively</li>
                             </ul>
-                            <br>
+                            <hr>
+							<h3 id='features'>Code coverage:</h3>
+							<span class="image main"><img src="images/coverage/geo_api.png" alt="" style="width: 75%;"/></span>
+							<hr>
                             <h3 id='features'>Docker info:</h3>
                             <ul>
                                 <li>Pull an image from my Docker Hub - click on the icon below</li>
