--- a/item_05.html
+++ b/item_05.html
@@ -51,7 +51,7 @@
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
-							<li><a href="item_10.html">DELTA</a></li>
+							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
@@ -102,7 +102,16 @@
                                 <li>Storing app’s secure credentials in environment variables</li>
                                 <li>A highly adaptable and scalable workflow for structuring and configuring a production-grade flask application using flask blueprints and the application factory pattern</li>
                             </ul>
-                            <br>
+							<hr>
+							<h3 id='features'>Code coverage:</h3>
+							<ul>
+								<li>Selenium and unit tests combined</li>
+							</ul>
+							<pre>
+								<code>coverage run -p test_routes.py && coverage run -p test_strategies.py && coverage run -p test_trend.py && coverage run -p tests.py && coverage combine && coverage html</code>
+							</pre>
+							<span class="image main"><img src="images/coverage/market_bias.png" alt="" style="width: 75%;"/></span>
+							<hr>
 						</div>
 					</div>
 
