--- a/item_07.html
+++ b/item_07.html
@@ -51,7 +51,7 @@
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
-							<li><a href="item_10.html">DELTA</a></li>
+							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
@@ -105,7 +105,31 @@
                                 <li>Storing app’s secure credentials in environment variables</li>
                                 <li>Using unittest library to perform unit tests and selenium for functional tests</li>
                             </ul>
-                            <br>
+							<hr>
+							<h3 id='features'>Code coverage:</h3>
+							<ul>
+								<li>Selenium and unit tests combined</li>
+							</ul>
+							<pre>
+								<code>coverage run -p manage.py test tests && coverage run -p manage.py test tests_selenium && coverage combine && coverage html</code>
+							</pre>
+							<span class="image main"><img src="images/coverage/scraper.png" alt="" style="width: 75%;"/></span>
+							<hr>
+                            <h3 id='features'>Docker info:</h3>
+                            <ul>
+                                <li>Pull an image from my Docker Hub - click on the icon below</li>
+                                <li>Create and start a container</li>
+                                <li>Pass environment variables to your container</li>
+                                <ul>
+                                    <li>with the -e flag</li>
+                                    <pre>
+                                        <code>docker run -p 8000:8000 -e SECRET_KEY="&lt;your secret key&gt;" &lt;imagename&gt; </code>
+                                    </pre>
+                                    <li>or using .env file</li>
+                                    <pre>
+                                        <code>docker run -p 8000:8000 --env-file .env &lt;imagename&gt;</code>
+                                    </pre>
+                                </ul>
 						</div>
 					</div>
 
