--- a/item_08.html
+++ b/item_08.html
@@ -51,7 +51,7 @@
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
-							<li><a href="item_10.html">DELTA</a></li>
+							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
@@ -73,7 +73,7 @@
                                 with 12-month average calculated using Numpy's mean function. The result is a statistical estimate and it can be helpful in measuring of inflation. 
                                 For the world's top 5 largest economies website provides information on actual changes in the prices of goods and services.
                             </p>
-							<br>
+							<hr>
 							<section>
 								<div class="tools">
 									<table class="alt">
@@ -101,7 +101,9 @@
                                 <li>Moving the fetching data function to a background thread to avoid unnecessary delays during request handling </li>
                                 <li>Implementing Jinja2 extensible templating engine for automatic HTML escaping to prevent cross-site scripting (XSS) attacks </li>
                             </ul>
-                            <br>
+							<hr>
+							<h3 id='features'>Code coverage:</h3>
+							<span class="image main"><img src="images/coverage/millionaires_club.png" alt="" style="width: 75%;"/></span>
 						</div>
 					</div>
 
