--- a/item_09.html
+++ b/item_09.html
@@ -51,7 +51,7 @@
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
-							<li><a href="item_10.html">DELTA</a></li>
+							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
@@ -75,7 +75,7 @@
                                 and we will leverage the "basic" HTTP authentication scheme. For password hashing, we can use Werkzeug Security to define functions that 
                                 handle password hashing and checking if a password is correct.
                             </p>
-							<br>
+							<hr>
 							<section>
 								<div class="tools">
 									<table class="alt">
@@ -103,6 +103,9 @@
                                 <li>Moving the fetching data function to a background thread to avoid unnecessary delays during request handling </li>
                                 <li>Implementing Jinja2 extensible templating engine for automatic HTML escaping to prevent cross-site scripting (XSS) attacks </li>
                             </ul>
+							<hr>
+							<h3 id='features'>Code coverage:</h3>
+							<span class="image main"><img src="images/coverage/dogs_dow.png" alt="" style="width: 75%;"/></span>
 						</div>
 					</div>
 
