--- a/item_12.html
+++ b/item_12.html
@@ -51,7 +51,7 @@
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
-							<li><a href="item_10.html">DELTA</a></li>
+							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
@@ -67,7 +67,7 @@
 							<h3>This is an application build with one of the fastest Python web frameworks - FastAPI. 
                                 The main function is to display current trend direction for all financial instruments included in Stooq's database.
                             </h3>
-							<br>
+							<hr>
                             <p>
                                 After receiving user's input, application is gaining access to the historical data and then calculates moving averages 
                                 by using 50-day, 100-day and 200-day lookback period.
@@ -96,6 +96,9 @@
                                 <li>Returns HTTP Exception with status code of 404 for non existing symbols/tickers </li>
                                 <li>Embedded interactive plotly visualizations chart </li>
                             </ul>
+							<hr>
+							<h3 id='features'>Code coverage:</h3>
+							<span class="image main"><img src="images/coverage/stooq_api.png" alt="" style="width: 75%;"/></span>
 						</div>
 					</div>
 
