--- a/item_02.html
+++ b/item_02.html
@@ -51,7 +51,7 @@
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
-							<li><a href="item_10.html">DELTA</a></li>
+							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
@@ -65,12 +65,14 @@
 							<span class="image main"><img src="images/mockups/3d_mockup.png" alt="" /></span>
 
 							<h3>This is a Python/Flask application powered by SQLAlchemy ORM to provide an efficient table management system.
-                                Its main function is to ensure that maximum capacity per day ( 30 covers ) is not overreached. 
+							</h3>
+							<p>
+								Its main function is to ensure that maximum capacity per day ( 30 covers ) is not overreached. 
                                 Our fictional business is closed for weekends, therefore reservation allocation algorithm will only allow bookings 
                                 from monday to friday. After visiting endpoint '/admin' user is presented with the option of checking particular 
                                 dates in regard to total number of bookings, email addresses and corresponding table requests.
-							</h3>
-							<br>
+							</p>
+							<hr>
 							<section>
 								<div class="tools">
 									<table class="alt">
@@ -119,8 +121,13 @@
                                     <li>Initializing WTForms basic class fields and validators as well as custom confirmation procedures applied to incoming data</li>
                                     <li>Advanced 3D animation techniques with the usage of CSS properties like perspective, gradients and rotate</li>
                                     <li>Declaring models using one-to-many relationship to take full advantage of linking tables together within the database</li>
-
                                 </ul>
+								<hr>
+								<h3 id='features'>Code coverage:</h3>
+								<ul>
+									<li>Selenium and unit tests combined</li>
+								</ul>
+								<span class="image main"><img src="images/coverage/3dining.png" alt="" style="width: 75%;"/></span>
 						</div>
 					</div>
 
