--- a/item_06.html
+++ b/item_06.html
@@ -51,7 +51,7 @@
 							<li><a href="item_07.html">Google Scraper</a></li>
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
-							<li><a href="item_10.html">DELTA</a></li>
+							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">NATURE</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
@@ -70,7 +70,7 @@
                                 After completing the registration process users are gaining access to multiple instruments. This website is using pandas-datareader to fetch historical data from FRED. 
                                 Before results are being displayed application is calculating very simple 12-month momentum formula to determine actual trend.  
                             </p>
-							<br>
+							<hr>
 							<section>
 								<div class="tools">
 									<table class="alt">
@@ -101,7 +101,10 @@
                                     <li>Using login_user function to create a session that will persist as the user stays logged in, which will allow to view protected pages</li>
                                     <li>Moving the email send function to a background thread to avoid unnecessary delays during request handling</li>
                                 </ul>
-                            <br>
+								<hr>
+								<h3 id='features'>Code coverage:</h3>
+								<span class="image main"><img src="images/coverage/trend_follower.png" alt="" style="width: 75%;"/></span>
+								<hr>
 						</div>
 					</div>
 
