added quant catalog page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
 							<li><a href="item_10.html">Digital Gold</a></li>
-							<li><a href="item_11.html">NATURE</a></li>
+							<li><a href="item_11.html">Quant Catalog</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
@@ -183,9 +183,9 @@
 										<img src="images/pic11.jpg" alt="" />
 									</span>
 									<a href="item_11.html">
-										<h2>NATURE</h2>
+										<h2>Quant Catalog</h2>
 										<div class="content">
-											<p>Restaurant website created using advanced CSS styling techniques: transitions, animations and image filtering.</p>
+											<p>After completing the registration to this application subscribers can login and are now able to create their own investment strategy.</p>
 										</div>
 									</a>
 								</article>
