--- a/item_10.html
+++ b/item_10.html
@@ -52,7 +52,7 @@
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
 							<li><a href="item_10.html">Digital Gold</a></li>
-							<li><a href="item_11.html">NATURE</a></li>
+							<li><a href="item_11.html">Quant Catalog</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
