--- a/item_11.html
+++ b/item_11.html
@@ -51,7 +51,7 @@
 							<li><a href="item_08.html">Millionaires Club</a></li>
 							<li><a href="item_09.html">Dogs of Dow</a></li>
 							<li><a href="item_10.html">Digital Gold</a></li>
-							<li><a href="item_11.html">NATURE</a></li>
+							<li><a href="item_11.html">Quant Catalog</a></li>
 							<li><a href="item_12.html">Stooq API</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
@@ -60,63 +60,55 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>NATURE | Food & Drinks</h1>
-							<span class="image main"><img src="images/mockups/nature_mockup.png" alt="" /></span>
+							<h1>Quant | Strategies Catalog</h1>
+							<span class="image main"><img src="images/mockups/quant_mockup.png" alt="" /></span>
 
-							<h3>This is a static website powered by HTML, CSS and Slick - jQuery plugin for creating fully customizable, 
-                                responsive and mobile friendly carousels/sliders.
+							<h3>This is a Python application powered by Django and its Object-Relational Mapper to provide convenient access to stored data.
                             </h3>
-							<br>
+							<hr>
+							<p>
+								In fact, Django's ORM is just a pythonical way to create SQL to query and manipulate your database and get results in a pythonic fashion. 
+								In this particular case users are able to view different trading strategies and related financial markets. 
+								After completing the registration subscribers can login and are now able to create their own investment strategy. 
+								To delete records from the database users need to be added to special group and granted permissions by the website administrator.
+							</p>
 							<section>
 								<div class="tools">
 									<table class="alt">
 										<tr>
 										  <th class="head">Live</th>
 										  <th class="head">Code</th>
+										  <th class="head">Docker</th>
+										  <th class="head">Selenium</th>
 										</tr>
 										<tr>
-										  <td><a href="https://nature-restaurant.netlify.app/" target="blank" class="live"><img src="images/netlify.png" alt=""></a></td>
-										  <td><a href="https://github.com/mjaroszewski1979/nature-restaurant" target="blank" class="live"><img src="images/github.png" alt=""></a></td>
+										  <td><a href="https://quantcatalog.herokuapp.com/" target="blank" class="live"><img src="images/heroku.png" alt=""></a></td>
+										  <td><a href="https://github.com/mjaroszewski1979/quant-catalog" target="blank" class="live"><img src="images/github.png" alt=""></a></td>
+										  <td><a href="https://github.com/mjaroszewski1979/quant-postgres" target="blank" class="live"><img src="images/docker.png" alt=""></a></td>
+										  <td><a href="https://github.com/mjaroszewski1979/quant-catalog/tree/main/selenium_tests" target="blank" class="live"><img src="images/selenium.png" alt=""></a></td>
 										</tr>
 									</table>
 								</div>
 							</section>
 							<br>
-                            <h3 id='features'>Structure:</h3>
+							<h3 id='features'>Features:</h3>
                             <ul>
-                                <li>Header</li>
-                                <ul>
-                                    <li>Company logo</li>
-                                    <li>Social media follow</li>
-                                    <li>Navigation bar - hamburger menu</li>
-                                </ul>
-                                <li>Body</li>
-                                <ul>
-                                    <li>Hero section</li>
-                                    <li>What we can offer</li>
-                                    <li>About us</li>
-                                    <li>Meet the restaurant's team members</li>
-                                    <li>Menu presentation</li>
-                                    <li>Customer testimonial examples</li>
-                                    <li>Contact and booking form</li>
-                                </ul>
-                                <li>Footer</li>
-                                <ul>
-                                    <li>Copyrights</li>
-                                </ul>
+                                <li>Working with template inheritance mechanism to build a base “skeleton” template that contains all the common elements and defines blocks that child templates can override</li>
+                                <li>Inserting images with dynamic path by utilizing built-in 'add' filter designed to format template variables</li>
+                                <li>Taking full advantage of Django's built-in features like cross-site request forgery protection to ensure safe data transfer in web forms to a database</li>
+                                <li>Associating multiple records in a table with multiple records in another table ( many-to-many relationship ) to achieve optimal ORM performance</li>
+								<li>Displaying stored data with variation because of the fact that many-to-many relationships can be queried using lookups across relationships</li>
+								<li>Using Q objects to achieve complete control over the complex queries necessary when constructing extensive search functionality</li>
+								<li>Applying GroupRequiredMixin provided by a third-party module - django-braces - to ensure that the requesting user is in the group specified</li>
+								<li>Breaking logic into smaller parts by adding various new Django applications to an existing project</li>
+								<li>Writing as much functionality as possible in models or utility files instead of views</li>
+								<li>Serving static files with WhiteNoise to accomplish high performance and efficiency without depending on nginx, Amazon S3 or any other external service</li>
+								<li>Storing app’s secure credentials in environment variables</li>
                             </ul>
-                            <br>
-                            <h3 id='features'>Features:</h3>
-                            <ul>
-                                <li>Compatible with devices of all sizes </li>
-                                <li>CSS custom properties for fast and forward-looking design</li>
-                                <li>HTML and CSS minification process aims to reduce webpage loading speed</li>
-                                <li>CSS Flexbox applied to simplify complex layout design</li>
-                                <li>Font awesome icons collection</li>
-                                <li>Advanced CSS styling techniques applied: transitions, animations and image filtering</li>
-                                <li>Netlify form submission and spam filters </li>
-                            </ul>
-                            <br>
+							<hr>
+							<h3 id='features'>Code coverage:</h3>
+							<span class="image main"><img src="images/coverage/quant_catalog.png" alt="" style="width: 75%;"/></span>
+                           
 						</div>
 					</div>
 
