added global macro page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<li><a href="item_09.html">Dogs of Dow</a></li>
 							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">Quant Catalog</a></li>
-							<li><a href="item_12.html">Stooq API</a></li>
+							<li><a href="item_12.html">Global Macro</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
@@ -194,10 +194,10 @@
 										<img src="images/pic12.jpg" alt="" />
 									</span>
 									<a href="item_12.html">
-										<h2>Stooq API</h2>
+										<h2>Global Macro</h2>
 										<div class="content">
-											<p>This is an application build with one of the fastest Python web frameworks - FastAPI. 
-												The main function is to display current trend direction for all financial instruments included in Stooq's database.</p>
+											<p>This is a Django application powered by HTMX to assist in building rich client-side experience. 
+												It provides with access to highly interactive graphs created using Bokeh for more impactful data visualization.</p>
 										</div>
 									</a>
 								</article>
