--- a/item_06.html
+++ b/item_06.html
@@ -53,7 +53,7 @@
 							<li><a href="item_09.html">Dogs of Dow</a></li>
 							<li><a href="item_10.html">Digital Gold</a></li>
 							<li><a href="item_11.html">Quant Catalog</a></li>
-							<li><a href="item_12.html">Stooq API</a></li>
+							<li><a href="item_12.html">Global Macro</a></li>
 							<li><a href="resume.html">Resume</a></li>
 						</ul>
 					</nav>
